# vds-core

./: .astylerc  COPYING  INSTALL  Makefile.am  README.md  code_of_conduct.md  configure.ac  libvdsconsensus.pc.in
build-aux/m4/: bitcoin_qt.m4
contrib/: README.md  bitcoin-cli.bash-completion  bitcoin-tx.bash-completion  bitcoind.bash-completion
contrib/amqp/: amqp_sub.py
contrib/debian/: changelog  control  copyright  postinst  postrm  preinst  prerm  vds.exaples  vds.install  vds.manpages
contrib/devtools/: gen-manpages.sh  gen_contracts.py  symbol-check.py
contrib/gitian-descriptors/: gitian-linux.yml
depends/: Makefile  config.site.in  funcs.mk
doc/: Doxyfile  amqp.md  authors.md  developer-notes.md  dnsseed-policy.md  init.md  payment-api.md  release-process.md  security-warnings.md  tor.md  translation_strings_policy.md  unit-tests.md  wallet-backup.md  zmq.md
doc/man/: Makefile.am  vds-cli.1  vds-fetch-params.1  vds-tx.1  vdsd.1
doc/release-notes/: release-notes-0.11.2.z3.md  release-notes-0.11.2.z4.md  release-notes-0.11.2.z5.md  release-notes-0.11.2.z7.md  release-notes-0.11.2.z9.md  release-notes-1.0.0-beta1.md  release-notes-1.0.0-beta2.md  release-notes-1.0.0-rc1.md  (+7 more)
share/: setup.nsi.in
src/: .directory  Makefile.am  Makefile.bench.include  Makefile.gtest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addb.cpp  addb.h  addrdb.cpp  addrdb.h  addressindex.h  addrman.cpp  addrman.h  alert.cpp  alert.h  alertkeys.h  amount.h  arith_uint256.cpp  arith_uint256.h  asyncrpcoperation.cpp  asyncrpcoperation.h  asyncrpcqueue.cpp  asyncrpcqueue.h  base58.cpp  base58.h  bech32.cpp  bip38_key.cpp  bip38_key.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  cachemap.h  (+155 more)
src/amqp/: amqpabstractnotifier.cpp  amqpabstractnotifier.h  amqpconfig.h  amqpnotificationinterface.cpp  amqpnotificationinterface.h  amqppublishnotifier.cpp  amqppublishnotifier.h  amqpsender.h
src/bench/: Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  prevector_destructor.cpp  rollingbloom.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_sanity.cpp  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/cpp-ethereum/: CMakeLists.txt
src/cpp-ethereum/cmake/: ProjectCryptopp.cmake  ProjectJsonCpp.cmake  ProjectSecp256k1.cmake
src/cpp-ethereum/libethashseal/: GenesisInfo.cpp  GenesisInfo.h
src/cpp-ethereum/libethashseal/genesis/: qtumMainNetwork.cpp  qtumTestNetwork.cpp
src/cpp-ethereum/libethcore/: SealEngine.cpp  SealEngine.h
src/cpp-ethereum/libethereum/: Executive.cpp  State.h
src/cpp-ethereum/scripts/: install_deps.sh
src/crypto/: aes.h  chacha20.h  common.h  equihash.cpp  equihash.h  equihash.tcc  hmac_sha256.h  hmac_sha512.h  pbkdf2.h  ripemd160.h  scrypt.cpp  scrypt.h  sha1.h  sha256.cpp  sha256.h  sha512.h
src/gtest/: main.cpp  test_checkblock.cpp  test_checktransaction.cpp  test_circuit.cpp  test_deprecation.cpp  test_httprpc.cpp  test_keys.cpp  test_keystore.cpp  test_libzcash_utils.cpp  test_mempool.cpp  test_merkletree.cpp  test_miner.cpp  test_noteencryption.cpp  test_paymentdisclosure.cpp  test_pow.cpp  test_proofs.cpp  test_sapling_note.cpp  test_transaction.cpp  test_transaction_builder.cpp  test_txid.cpp  test_validation.cpp  test_zip32.cpp
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qtum/: qtumDGP.h  qtumstate.cpp  storageresults.h
src/rpc/: ad.cpp  blockchain.cpp  client.cpp  client.h  masternode.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  vdsconsensus.cpp  vdsconsensus.h
src/secp256k1/: configure.ac
src/snark/: Makefile
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  addrman_tests.cpp  alert_tests.cpp  base58_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  equihash_tests.cpp  key_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  sighash_tests.cpp  skiplist_tests.cpp  test_bitcoin.cpp  test_bitcoin_fuzzy.cpp  torcontrol_tests.cpp  transaction_tests.cpp
src/test/data/: base58_keys_valid.json  script_tests.json  sighash.json  tx_invalid_checktx.json  tx_invalid_verify.json  tx_valid.json
src/vds/: Address.cpp  Address.hpp  IncrementalMerkleTree.cpp  IncrementalMerkleTree.hpp  JoinSplit.cpp  JoinSplit.hpp  Note.cpp  Note.hpp  NoteEncryption.cpp  NoteEncryption.hpp  Proof.hpp  prf.cpp  prf.h  util.cpp  zip32.cpp  zip32.h
src/vds/circuit/: gadget.tcc
src/wallet/: asyncrpcoperation_sendmany.cpp  asyncrpcoperation_sendmany.h  asyncrpcoperation_shieldcoinbase.cpp  asyncrpcoperation_shieldcoinbase.h  bip39_mnemonic.cpp  bip39_mnemonic.h  bip39_words_english.h  coincontrol.h  crypter.cpp  crypter.h  db.h  feebumper.cpp  feebumper.h  fees.cpp  fees.h  rpcdisclosure.cpp  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/gtest/: test_wallet.cpp  test_wallet_zkeys.cpp
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.h
vcutil/: build-debian-package.sh  build.sh  fetch-params.sh  make-release.py  release-notes.py
(+23 files in other folders)
